--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -36,13 +36,13 @@
     
         <div class="form-row">
                 <div class="col-md-3 mb-3">
-                    <input type="text" class="form-control" id="firstName" placeholder="First name" minlength="1" maxlength="100" required>
+                    <input type="text" class="form-control" id="firstName" name="firstName" placeholder="First name" minlength="1" maxlength="100" required>
                     <div class="invalid-feedback">
                         Please tell us your first name.
                     </div>
                 </div>
                 <div class="col-md-3 mb-3">
-                    <input type="text" class="form-control" id="lastName" placeholder="Last Name" minlength="1" maxlength="100" required>
+                    <input type="text" class="form-control" id="lastName" name="lastName" placeholder="Last Name" minlength="1" maxlength="100" required>
                     <div class="invalid-feedback">
                         Please tell us your last name.
                     </div>
@@ -51,13 +51,13 @@
 
         <div class="form-row">
                 <div class="col-md-3 mb-3">
-                    <input type="email" class="form-control" id="email" placeholder="your@email.com" required>
+                    <input type="email" class="form-control" id="email" name="email" placeholder="your@email.com" required>
                     <div class="invalid-feedback">
                         Please provide a valid email.
                     </div>
                 </div>
                 <div class="col-md-3 mb-3">
-                    <input type="text" class="form-control" id="phone" placeholder="Mobile number" minlength="8"
+                    <input type="text" class="form-control" id="phone" name="phone" placeholder="Mobile number" minlength="8"
                         maxlength="20" required>
                     <div class="invalid-feedback">
                         Please enter your phone number.
@@ -66,13 +66,13 @@
             </div>
         <div class="form-row">
             <div class="col-md-3 mb-3">
-                <input type="number" class="form-control" id="postcode" placeholder="Postcode" required>
+                <input type="number" class="form-control" id="postcode" name="postcode" placeholder="Postcode" required>
                 <div class="invalid-feedback">
                     Please provide a valid postcode.
                 </div>
             </div>
             <div class="col-md-3 mb-3">
-                <input type="text" class="form-control" id="displayName" placeholder="Display Name"  aria-describedby="displayNameHelpBlock"
+                <input type="text" class="form-control" id="displayName" name="displayName" placeholder="Display Name"  aria-describedby="displayNameHelpBlock"
                 minlength="3"
                     maxlength="12" required>
                 <div class="invalid-feedback">
