--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -31,7 +31,7 @@
 <div class="reports">
         <div class="snow-header">
                 <h3>Market City VR Reports</h3>
-                <a href="/signup" class="btn btn-secondary">Signup Form</a>
+                <!-- <a href="/signup" class="btn btn-secondary">Signup Form</a> -->
         </div>
         <div class="snow-form">
                 <!-- Signup Form -->
@@ -99,12 +99,15 @@
                     <label for="reportOutput">Choose format</label>
                     <div class="form-group" name="reportOutput">
                         <div class="form-check form-check-inline">
+                            <input class="form-check-input" type="radio" name="output" id="inlineRadio1" value="html" checked>
+                            <label class="form-check-label" for="inlineRadio1">HTML</label>
+                        </div>
+                        <div class="form-check form-check-inline">
                             <input class="form-check-input" type="radio" name="output" id="inlineRadio1" value="csv">
                             <label class="form-check-label" for="inlineRadio1">CSV</label>
                         </div>
                         <div class="form-check form-check-inline">
-                            <input class="form-check-input" type="radio" name="output" id="inlineRadio2" value="json"
-                                checked>
+                            <input class="form-check-input" type="radio" name="output" id="inlineRadio2" value="json">
                             <label class="form-check-label" for="inlineRadio2">JSON</label>
                         </div>
                     </div>
