--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -1,41 +1,30 @@
 html, body {
-    width: 100%;
     height: 100%;
-    margin: 0;
-    padding: 0%;
 }
 
 body {
     font-family: Arial, Helvetica, sans-serif;
-}
-
-
-.snow {
-    background-color: #cccccc;
-    background-image: url("/static/assets/UI_Background.png");
+    background-image: url("/static/assets/UI_Background.jpg");
     background-position-x: center;
-    background-position-y: top;
+    background-position-y: bottom;
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
 }
 
 .snow-header {
-    height: 240px;
+    height: 200px;
     background-image: url("/static/assets/UI_Logo.png");
-    background-size: 30%;
+    background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
 }
 
 .snow-form {
     text-align: left;
-    padding: 5%;
-}
-
-.was-validated .form-control:valid {
-    border-color: #28a745;
-    background-color: #28a745;
+    padding-left: 15%;
+    padding-right: 15%;
+    color: white;
 }
 
 .snow-form a{
@@ -43,11 +32,34 @@ body {
     text-decoration: underline !important;
 }
 
-.snow-footer {
-    background-image: url("/static/assets/UI_Snowy_Sign.png");
-    background-size: 100%;
-    height: 500px;
-    background-position: center, bottom;
-    background-repeat: no-repeat;
+.modal-content {
+    text-align: left;
+    color: #212529;
 }
 
+.form-control:valid {
+    border-color: #339900;
+    background-color: #339900;
+}
+
+.invalid-feedback {
+    color: white !important;
+}
+
+.was-validated .form-check-input:valid ~ .form-check-label, .form-check-input.is-valid ~ .form-check-label {
+    color: white !important;
+}
+
+.was-validated .form-check-input:invalid ~ .form-check-label, .form-check-input.is-invalid ~ .form-check-label {
+    color: white !important;
+}
+
+.was-validated .form-control:invalid, .form-control.is-invalid, .was-validated .custom-select:invalid, .custom-select.is-invalid {
+    color: #dc3545;
+}
+
+.btn-primary {
+    color: #fff !important;
+    background-color: #339900 !important;
+    border-color: #339900 !important;
+}
