--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -22,189 +22,195 @@
 </head>
 
 <body>
-    <div class="snow">
 
-        <div class="snow-header">
-        </div>
-        <div class="snow-form">
-            <!-- Signup Form -->
-            <form method="POST" action="" class="needs-validation" novalidate>
+    <div class="snow-header"></div>
+    <div class="snow-form">
 
-                <div class="form-group">
-                    <input type="text" class="form-control" id="firstName" name="firstName" placeholder="First name"
-                        minlength="1" maxlength="100" required>
+        <!-- Signup Form -->
+        <form method="POST" action="" class="needs-validation" novalidate id="signup-form" autocomplete="off">
+
+            <div class="form-group">
+                <input type="text" class="form-control" id="firstName" name="firstName" placeholder="First name"
+                    minlength="1" maxlength="100" required onchange="$('#firstName')[0].checkValidity(); //$('button[type=submit]')[0].form.blah();">
+                <div class="invalid-feedback">
+                    Please tell us your first name.
+                </div>
+            </div>
+            <div class="form-group">
+
+                <input type="text" class="form-control" id="lastName" name="lastName" placeholder="Last Name" minlength="1"
+                    maxlength="100" required>
+                <div class="invalid-feedback">
+                    Please tell us your last name.
+                </div>
+            </div>
+            <div class="form-group">
+                <input type="email" class="form-control" id="email" name="email" placeholder="your@email.com" required>
+                <div class="invalid-feedback">
+                    Please provide a valid email.
+                </div>
+            </div>
+            <div class="form-group">
+                <input type="text" class="form-control" id="phone" name="phone" placeholder="Mobile number" minlength="8"
+                    maxlength="20" required>
+                <div class="invalid-feedback">
+                    Please enter your phone number.
+                </div>
+            </div>
+            <div class="form-group">
+                <input type="number" class="form-control" id="postcode" name="postcode" placeholder="Postcode" required>
+                <div class="invalid-feedback">
+                    Please provide a valid postcode.
+                </div>
+            </div>
+            <div class="form-group">
+                <input type="text" class="form-control" id="displayName" name="displayName" placeholder="Display Name"
+                    aria-describedby="displayNameHelpBlock" minlength="3" maxlength="12" required>
+                <div class="invalid-feedback">
+                    Must be 3-12 characters long, contain letters and numbers, and must not contain spaces,
+                    special
+                    characters, or emoji.
+                </div>
+            </div>
+            <label for="name">Which hand is your preffered for game play?</label>
+            <div class="form-group">
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" name="hand" id="inlineRadio1" value="left">
+                    <label class="form-check-label" for="inlineRadio1">Left</label>
+                </div>
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" name="hand" id="inlineRadio2" value="right" checked>
+                    <label class="form-check-label" for="inlineRadio2">Right</label>
+                </div>
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" name="hand" id="inlineRadio3" value="both">
+                    <label class="form-check-label" for="inlineRadio3">Both</label>
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="form-check">
+                    <input class="form-check-input" type="checkbox" value="" id="agreeCheck" required>
+                    <label class="form-check-label" for="agreeCheck">
+                        I agree to
+                        <a data-toggle="modal" data-target="#tacModal">
+                            Terms & Conditions
+                        </a>.
+                    </label>
                     <div class="invalid-feedback">
-                        Please tell us your first name.
+                        You must agree to the terms and conditions before you are allowed to play.
                     </div>
                 </div>
-                <div class="form-group">
+            </div>
+            <button class="btn btn-primary" type="submit">Submit</button>
 
-                    <input type="text" class="form-control" id="lastName" name="lastName" placeholder="Last Name"
-                        minlength="1" maxlength="100" required>
-                    <div class="invalid-feedback">
-                        Please tell us your last name.
-                    </div>
-                </div>
-                <div class="form-group">
-                    <input type="email" class="form-control" id="email" name="email" placeholder="your@email.com"
-                        required>
-                    <div class="invalid-feedback">
-                        Please provide a valid email.
-                    </div>
-                </div>
-                <div class="form-group">
-                    <input type="text" class="form-control" id="phone" name="phone" placeholder="Mobile number"
-                        minlength="8" maxlength="20" required>
-                    <div class="invalid-feedback">
-                        Please enter your phone number.
-                    </div>
-                </div>
-                <div class="form-group">
-                    <input type="number" class="form-control" id="postcode" name="postcode" placeholder="Postcode"
-                        required>
-                    <div class="invalid-feedback">
-                        Please provide a valid postcode.
-                    </div>
-                </div>
-                <div class="form-group">
-                    <input type="text" class="form-control" id="displayName" name="displayName" placeholder="Display Name"
-                        aria-describedby="displayNameHelpBlock" minlength="3" maxlength="12" required>
-                    <div class="invalid-feedback">
-                        Must be 3-12 characters long, contain letters and numbers, and must not contain spaces,
-                        special
-                        characters, or emoji.
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="hand" id="inlineRadio1" value="left">
-                        <label class="form-check-label" for="inlineRadio1">Left</label>
-                    </div>
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="hand" id="inlineRadio2" value="right"
-                            checked>
-                        <label class="form-check-label" for="inlineRadio2">Right</label>
-                    </div>
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="hand" id="inlineRadio3" value="both">
-                        <label class="form-check-label" for="inlineRadio3">Both</label>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div class="form-check">
-                        <input class="form-check-input" type="checkbox" value="" id="agreeCheck" required>
-                        <label class="form-check-label" for="agreeCheck">
-                            Agree to
-                            <a data-toggle="modal" data-target="#tacModal">
-                                Terms & Conditions
-                            </a>.
-                        </label>
-                        <div class="invalid-feedback">
-                            You must agree before submitting.
-                        </div>
-                    </div>
-                </div>
-                <button class="btn btn-primary" type="submit">Submit form</button>
+        </form>
 
-            </form>
-
-
-
-
-        </div>
-        <div class="snow-footer">
-        </div>
-    </div>
 
     <!-- Ts & Cs Modal -->
     <div class="modal fade" id="tacModal" tabindex="-1" role="dialog" aria-labelledby="tacModalTitle" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="tacModalTitle">Terms and Conditions</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    Blah blah blah....
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">
-                        Close
-                    </button>
-                    <button type="button" class="btn btn-primary" onclick="document.getElementById('agreeCheck').checked=true;"
-                        data-dismiss="modal">
-                        I agree
-                    </button>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    {% if firstName %}
-    <!-- Thank You Modal -->
-    <div class="modal fade show" id="thanksModal" tabindex="-1" role="dialog" aria-labelledby="thanksModalTitle" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="tacModalTitle">Success!</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    <h2>
-                        Thanks for signing up {{ firstName }} {{ lastName }}.
-                    </h2>
-                    <h2>
-                        Now get ready to play!
-                    </h2>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-primary" data-dismiss="modal">
-                        Close
-                    </button>
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="tacModalTitle">Terms and Conditions</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        Blah blah blah....
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">
+                            Close
+                        </button>
+                        <button type="button" class="btn btn-primary" onclick="document.getElementById('agreeCheck').checked=true;"
+                            data-dismiss="modal">
+                            I agree
+                        </button>
+                    </div>
                 </div>
             </div>
         </div>
+    
+        {% if firstName %}
+        <!-- Thank You Modal -->
+        <div class="modal fade show" id="thanksModal" tabindex="-1" role="dialog" aria-labelledby="thanksModalTitle"
+            aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="tacModalTitle">Signup successful</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <h2>
+                            Thanks {{ firstName }} {{ lastName }}.
+                        </h2>
+                        <h2>
+                            Now get ready to play!
+                        </h2>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-primary" data-dismiss="modal">
+                            Close
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        {% endif %}
+    
+    
+        <script>
+            // Example starter JavaScript for disabling form submissions if there are invalid fields
+            (function () {
+                'use strict';
+                window.addEventListener('load', function () {
+                    // Fetch all the forms we want to apply custom Bootstrap validation styles to
+                    var forms = document.getElementsByClassName('needs-validation');
+                    // Loop over them and prevent submission
+                    var validation = Array.prototype.filter.call(forms, function (form) {
+                        form.addEventListener('submit', function (event) {
+                            if (form.checkValidity() === false) {
+                                console.log('not valid');
+                                event.preventDefault();
+                                event.stopPropagation();
+                            } else {
+                                console.log('seems valid');
+                                console.log(form.serialize());
+                            }
+                            form.classList.add('was-validated');
+                        }, false);
+    
+                        var progressValidation = Array.prototype.filter.call($(form).find(':input'),
+                            function (input) {
+                                input.addEventListener('change', function (event) {
+                                    if (input.checkValidity() === false) {
+                                        console.log('input not valid');
+                                    } else {
+                                        console.log('input seems valid');
+                                    }
+                                }, false);
+                            });
+    
+                    });
+                }, false);
+            })();
+        </script>
+    
+        {% if firstName %}
+        <script>
+            // show the thanks modal on page load if firstname is set
+            $(window).ready(function () {
+                $('#thanksModal').modal('show');
+            });
+        </script>
+        {% endif %}
+
+
     </div>
-    {% endif %}
-
-
-    <script>
-        // Example starter JavaScript for disabling form submissions if there are invalid fields
-        (function () {
-            'use strict';
-            window.addEventListener('load', function () {
-                // Fetch all the forms we want to apply custom Bootstrap validation styles to
-                var forms = document.getElementsByClassName('needs-validation');
-                // Loop over them and prevent submission
-                var validation = Array.prototype.filter.call(forms, function (form) {
-                    form.addEventListener('submit', function (event) {
-                        if (form.checkValidity() === false) {
-                            console.log('not valid');
-                            event.preventDefault();
-                            event.stopPropagation();
-                        } else {
-                            console.log('seems valid');
-                            console.log(form.serialize());
-                        }
-                        form.classList.add('was-validated');
-                    }, false);
-                });
-            }, false);
-        })();
-    </script>
-        
-    {% if firstName %}
-    <script>
-        // show the thanks modal on page load if firstname is set
-        $(window).ready(function(){        
-            $('#thanksModal').modal('show');
-        }); 
-    </script>
-    {% endif %}
 
 </body>
 
