--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -72,6 +72,26 @@
                     characters, or emoji.
                 </div>
             </div>
+            <div class="form-group form-row">
+                <div class="col">
+                    <input type="text" class="form-control" id="displayName" name="displayName" placeholder="Display Name"
+                        aria-describedby="displayNameHelpBlock" minlength="3" maxlength="12" required>
+                    <div class="invalid-feedback">
+                        Must be 3-12 characters long, contain letters and numbers, and must not contain spaces,
+                        special
+                        characters, or emoji.
+                </div>
+                </div>
+                <div class="col">
+                    <select class="form-control" id="hand" name="hand">
+                        <option value="right" selected>Choose which hand you prefer?</option>
+                        <option value="left">Left</option>
+                        <option value="right">Right</option>
+                        <option value="both">Both</option>
+                      </select>
+                </div>
+            </div>
+            <!--
             <label for="name">Which hand is your preffered for game play?</label>
             <div class="form-group">
                 <div class="form-check form-check-inline">
@@ -87,6 +107,7 @@
                     <label class="form-check-label" for="inlineRadio3">Both</label>
                 </div>
             </div>
+            -->
             <div class="form-group">
                 <div class="form-check">
                     <input class="form-check-input" type="checkbox" value="" id="agreeCheck" required>
@@ -190,6 +211,7 @@
                                     if (input.checkValidity() === false) {
                                         console.log('input not valid');
                                     } else {
+                                        input.classList.add('was-validated')
                                         console.log('input seems valid');
                                     }
                                 }, false);
