added station status endpoints

--- a/app/templates/terminal.html
+++ b/app/templates/terminal.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="refresh" content="10" />
-    <title>Select player - Terminal {{ terminal }}</title>
+    <title>Select player - Station {{ station }}</title>
     
     <link rel=stylesheet type=text/css href="/static/styles.css">
 
@@ -32,7 +32,7 @@
     <div class="snow-header">
     </div>
     <div class="next-header">
-        <h1>Player queue for terminal {{ terminal }}</h1>
+        <h1>Player queue for Station {{ station }}</h1>
     </div>
     <div class="next-player">
         {% if next_player %}
