--- a/app/templates/station.html
+++ b/app/templates/station.html
@@ -10,17 +10,9 @@
     
     <link rel=stylesheet type=text/css href="/static/styles.css">
 
-    <!-- Bootstrap -->
     <link rel="stylesheet" href="/static/bootstrap.css">
-    <!-- link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-        crossorigin="anonymous" -->
-
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-        crossorigin="anonymous"></script>
-
+    <script src="/static/jquery-3.3.1.min.js"></script>
     <script src="/static/bootstrap.bundle.js"></script>
-
     <script type="text/javascript" src="/static/moment.min.js"></script>
 
 
@@ -39,10 +31,29 @@
         <table class="table table-striped table-bordered table-dark table-hover">
             <thead>
                 <tr>
-                    <th scope="col" style="text-align:center;">Waiting for player</th>
+                    <th scope="col" style="text-align:center;"><span id="status">Waiting for status</span></th>
                 </tr>
             </thead>
         </table>
+        <script type=text/javascript>
+
+            $(document).ready(function () {
+                var interval = 2000;   //number of mili seconds between each call
+                var refresh = function() {
+                    $.ajax({
+                        url: "/station/{{ station }}/status",
+                        success: function(data) {
+                            $("#status").text(data);
+                            setTimeout(function() {
+                                refresh();
+                            }, interval);
+                        }
+                    });
+                };
+                refresh();
+            });
+
+          </script>
     </div>
     <div class="next-player">
         {% if next_player %}
