--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -7,22 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Reports</title>
     <link rel=stylesheet type=text/css href="/static/styles.css">
-
-    <!-- Bootstrap -->
     <link rel="stylesheet" href="/static/bootstrap.css">
-    <!-- link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-        crossorigin="anonymous" -->
-
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-        crossorigin="anonymous"></script>
-
+    <script src="/static/jquery-3.3.1.min.js"></script>
     <script src="/static/bootstrap.bundle.js"></script>
-
     <script type="text/javascript" src="/static/moment.min.js"></script>
     <script type="text/javascript" src="/static/daterangepicker.js"></script>
     <link rel="stylesheet" type="text/css" href="/static/daterangepicker.css" />
-
 </head>
 
 <body>
