--- a/app/templates/report-scores.html
+++ b/app/templates/report-scores.html
@@ -6,23 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Scores</title>
-
-    <!-- Bootstrap -->
     <link rel="stylesheet" href="/static/bootstrap.css">
-    <!-- link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-        crossorigin="anonymous" -->
-
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-        crossorigin="anonymous"></script>
-
+    <script src="/static/jquery-3.3.1.min.js"></script>
     <script src="/static/bootstrap.bundle.js"></script>
-
     <script type="text/javascript" src="/static/moment.min.js"></script>
-
-    
     {{ moment.include_moment() }}
-
 </head>
 
 <body>
