more professional place holder for Ts and Cs

--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -120,7 +120,7 @@
                         </button>
                     </div>
                     <div class="modal-body">
-                        Blah blah blah....
+                        Please ask facilitator for the Terms and Conditions.
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-dismiss="modal">
