--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -22,14 +22,14 @@
 
             <div class="form-group">
                 <input type="text" class="form-control" id="firstName" name="firstName" placeholder="First name"
-                    pattern="[-A-Za-z][^\t\n\r]" minlength="1" maxlength="100" required>
+                    pattern="[a-zA-Z0-9\s]+" minlength="1" maxlength="100" required>
                 <div class="invalid-feedback">
                     Please tell us your first name.
                 </div>
             </div>
             <div class="form-group">
 
-                <input type="text" class="form-control" id="lastName" name="lastName" placeholder="Last Name" pattern="[-A-Za-z][^\t\n\r]"
+                <input type="text" class="form-control" id="lastName" name="lastName" placeholder="Last Name" pattern="[a-zA-Z0-9\s]+"
                     minlength="1" maxlength="100" required>
                 <div class="invalid-feedback">
                     Please tell us your last name.
