--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -22,14 +22,14 @@
 
             <div class="form-group">
                 <input type="text" class="form-control" id="firstName" name="firstName" placeholder="First name"
-                    pattern="[a-zA-Z0-9\s]+" minlength="1" maxlength="100" required>
+                    pattern="^[a-zA-Z0-9\s]+" minlength="1" maxlength="100" required>
                 <div class="invalid-feedback">
                     Please tell us your first name.
                 </div>
             </div>
             <div class="form-group">
 
-                <input type="text" class="form-control" id="lastName" name="lastName" placeholder="Last Name" pattern="[a-zA-Z0-9\s]+"
+                <input type="text" class="form-control" id="lastName" name="lastName" placeholder="Last Name" pattern="^[a-zA-Z0-9\s]+"
                     minlength="1" maxlength="100" required>
                 <div class="invalid-feedback">
                     Please tell us your last name.
@@ -49,7 +49,7 @@
                 </div>
             </div>
             <div class="form-group">
-                <input type="number" class="form-control" id="postcode" name="postcode" placeholder="Postcode" required>
+                <input type="number" class="form-control" id="postcode" name="postcode" placeholder="Postcode" pattern="[0-9]{4}" minlength="4" maxlength="4" required>
                 <div class="invalid-feedback">
                     Please provide a valid postcode.
                 </div>
@@ -66,7 +66,7 @@
                 </div>
                 <div class="col">
                     <select class="form-control" id="hand" name="hand">
-                        <option value="right" selected>Choose which hand you prefer?</option>
+                        <option value="both" selected>select if you are a right or left handed player</option>
                         <option value="left">Left</option>
                         <option value="right">Right</option>
                         <option value="both">Both</option>
