--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -49,7 +49,7 @@
                 </div>
             </div>
             <div class="form-group">
-                <input type="number" class="form-control" id="postcode" name="postcode" placeholder="Postcode" pattern="[0-9]{4}" minlength="4" maxlength="4" required>
+                <input type="number" class="form-control" id="postcode" name="postcode" placeholder="Postcode" pattern="^[0-9]{4}$" minlength="4" maxlength="4" required>
                 <div class="invalid-feedback">
                     Please provide a valid postcode.
                 </div>
