--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -42,7 +42,7 @@
                 </div>
             </div>
             <div class="form-group">
-                <input type="text" class="form-control" id="phone" name="phone" placeholder="Mobile number" pattern="[-()+0-9]{8,20}"
+                <input type="number" class="form-control" id="phone" name="phone" placeholder="Mobile number" pattern="[-()+0-9]{8,20}"
                     minlength="8" maxlength="20" required>
                 <div class="invalid-feedback">
                     Please enter your phone number.
@@ -66,30 +66,11 @@
                 </div>
                 <div class="col">
                     <select class="form-control" id="hand" name="hand">
-                        <option value="both" selected>select if you are a right or left handed player</option>
+                        <option value="right" selected>Right (Change this if you are left handed)</option>
                         <option value="left">Left</option>
-                        <option value="right">Right</option>
-                        <option value="both">Both</option>
                     </select>
                 </div>
             </div>
-            <!--
-            <label for="name">Which hand is your preffered for game play?</label>
-            <div class="form-group">
-                <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" name="hand" id="inlineRadio1" value="left">
-                    <label class="form-check-label" for="inlineRadio1">Left</label>
-                </div>
-                <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" name="hand" id="inlineRadio2" value="right" checked>
-                    <label class="form-check-label" for="inlineRadio2">Right</label>
-                </div>
-                <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" name="hand" id="inlineRadio3" value="both">
-                    <label class="form-check-label" for="inlineRadio3">Both</label>
-                </div>
-            </div>
-            -->
             <div class="form-group">
                 <div class="form-check">
                     <input class="form-check-input" type="checkbox" value="" id="agreeCheck" required>
